[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/BaddieSpawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/gameover.wav" type="AudioStream" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="BaddieSpawner" parent="." instance=ExtResource( 2 )]

[node name="Baddies" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 250, 450 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Score" type="Label" parent="HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 75.0
margin_bottom = 24.0
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="Label" parent="HUD"]
margin_left = 54.0
margin_top = 10.0
margin_right = 119.0
margin_bottom = 24.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="HUD"]
margin_left = 10.0
margin_top = 30.0
margin_right = 75.0
margin_bottom = 44.0
text = "High score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreValue" type="Label" parent="HUD"]
margin_left = 83.0
margin_top = 30.0
margin_right = 155.0
margin_bottom = 44.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseMessage" type="Label" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "You lose!
Click left mouse button to restart."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
